# testovoe

.secrets/: db.example  env.example
blog_service/: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  logger.py  pyproject.toml
blog_service/scripts/: seeds.py
blog_service/src/: config.py  main.py
blog_service/src/api/: api.py  dependencies.py
blog_service/src/connectors/: redis_client.py
blog_service/src/exceptions/: exceptions.py  exceptions_handlers.py
blog_service/src/migrations/: env.py
blog_service/src/migrations/versions/: 2026_03_04_1642-ee8035c7beee_init.py  2026_03_05_0958-c41283d68da0_delete_name_surname_and_add_email_.py  2026_03_05_1221-ddb74b6a3230_nullable_false_for_title_and_context.py
blog_service/src/models/: __init__.py  posts.py  users.py
blog_service/src/repositories/: base.py  posts.py  users.py
blog_service/src/schemas/: post_schemas.py  posts_schemas.py  users.py  users_schemas.py
blog_service/src/services/: base.py  posts_services.py
blog_service/src/services/cache/: cache_service.py  posts_cache.py
blog_service/src/utils/: db_manager.py  rate_limiter.py
blog_service/tests/: conftest.py
blog_service/tests/unit/services/post_service/: test_post_service.py
blog_service/tests/unit/services/postcache/: post_cache.py
